Add //mojo/edk/embedder:headers as a dependency for the multi-process host.

Bug: 783173
Change-Id: I2bcf961155fab34a9a58865ca17ebe28876bab10
Reviewed-on: https://chromium-review.googlesource.com/764118
Commit-Queue: Jamie Walch <jamiewalch@chromium.org>
Reviewed-by: Zijie He <zijiehe@chromium.org>
Cr-Commit-Position: refs/heads/master@{#516078}